import { Injectable } from '@nestjs/common';

interface UserSessionsQuery {
  page: number;
  limit: number;
  startDate?: string;
  endDate?: string;
}

interface UsersOverviewQuery {
  page: number;
  limit: number;
  search?: string;
}

@Injectable()
export class AnalyticsService {
  /**
   * Get user summary statistics
   * TODO: Implement using analytics-service gRPC client or ClickHouse direct query
   */
  async getUserSummary(userId: string) {
    // TODO: Query ClickHouse analytics_db.session_recording_metadata
    // Aggregate: total sessions, duration, page views, clicks, countries, devices
    return {
      userId,
      email: 'user@example.com',
      totalSessions: 0,
      totalDuration: 0,
      totalPageViews: 0,
      totalClicks: 0,
      countries: [],
      devices: [],
      lastSessionAt: new Date().toISOString(),
      firstSessionAt: new Date().toISOString(),
    };
  }

  /**
   * Get user sessions with pagination
   * TODO: Implement using audit-service gRPC client
   */
  async getUserSessions(_userId: string, _query: UserSessionsQuery) {
    // TODO: Query ClickHouse analytics_db.session_recording_metadata
    // Filter by userId, startDate, endDate
    // Paginate results
    return {
      data: [],
      total: 0,
    };
  }

  /**
   * Get user location statistics
   * TODO: Implement using ClickHouse aggregation
   */
  async getUserLocations(_userId: string) {
    // TODO: Query ClickHouse analytics_db.session_recording_metadata
    // GROUP BY country_code, COUNT sessions, SUM duration
    return [];
  }

  /**
   * Get top active users
   * TODO: Implement using ClickHouse aggregation
   */
  async getTopUsers(_limit: number) {
    // TODO: Query ClickHouse analytics_db.session_recording_metadata
    // GROUP BY actor_id, COUNT sessions, MAX last_active
    // ORDER BY session_count DESC LIMIT N
    return {
      data: [],
      total: 0,
    };
  }

  /**
   * Get users overview with search and pagination
   * TODO: Implement using ClickHouse aggregation + identity-service lookup
   */
  async getUsersOverview(query: UsersOverviewQuery) {
    // TODO: Query ClickHouse analytics_db.session_recording_metadata
    // GROUP BY actor_id
    // If search provided, join with identity-service to filter by email
    // Paginate results
    return {
      data: [],
      total: 0,
      page: query.page,
      totalPages: 0,
    };
  }
}
